# fitbot

./: Dockerfile  README.md  fitbot.cabal  quotes.json  scraper.js
src/: Main.hs
